fix: correct header icon spacing

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -77,6 +77,7 @@
 
 .header__action-button {
   @include button-link;
+  margin: 0.5rem;
 }
 
 .slider-menu {
